--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "escapecamp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stonexvi.github.io/escapecamp",
+  "homepage": "https://stonexvi.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
